Fixing toc alignment annoyance

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -245,11 +245,8 @@ h3 {
 }
 
 .toc-wrap {
-  padding: 3rem 0 6rem;
-}
-
-.toc-column {
-  padding: 0 1.5rem;
+  padding-top: 3rem;
+  padding-bottom: 6rem;
 }
 
 .toc {
